add pdf download
